--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@lottiefiles/lottie-interactivity": "^1.6.2",
     "axios": "^1.4.0",
+    "axios-retry": "^3.5.1",
     "formik": "^2.2.9",
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
