--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-datepicker": "^4.12.0",
     "react-dom": "^18.2.0",
     "react-lottie-player": "^1.5.4",
-    "react-modal-sheet": "^2.0.0",
+    "react-modal-sheet": "github:Shubham-ly/react-modal-sheet",
     "react-router-dom": "^6.13.0",
     "yup": "^1.1.1"
   },
