--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-datepicker": "^4.12.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-lottie-player": "^1.5.4",
     "react-modal-sheet": "^2.0.0",
     "react-router-dom": "^6.13.0",
